WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90851
[Chromium-Mac] Form related layout tests cause timeout
https://bugs.webkit.org/show_bug.cgi?id=90851
Summary
[Chromium-Mac] Form related layout tests cause timeout
yosin
Reported
2012-07-09 23:59:56 PDT
Regressions: Unexpected tests timed out : (38) fast/css/pseudo-in-range-invalid-value.html = TIMEOUT fast/css/pseudo-in-range.html = TIMEOUT fast/css/pseudo-out-of-range.html = TIMEOUT fast/dom/HTMLLabelElement/label-control.html = TIMEOUT fast/dom/shadow/input-shadow-nochange.html = TIMEOUT fast/forms/datalist/input-list.html = TIMEOUT fast/forms/date/ValidityState-rangeOverflow-date.html = TIMEOUT fast/forms/date/ValidityState-rangeUnderflow-date.html = TIMEOUT fast/forms/date/ValidityState-stepMismatch-date.html = TIMEOUT fast/forms/date/ValidityState-typeMismatch-date.html = TIMEOUT fast/forms/date/date-appearance.html = TIMEOUT fast/forms/date/date-fixed-placeholder.html = TIMEOUT fast/forms/date/date-input-type.html = TIMEOUT fast/forms/date/date-input-visible-strings.html = TIMEOUT fast/forms/date/date-stepup-stepdown-from-renderer.html = TIMEOUT fast/forms/date/date-stepup-stepdown.html = TIMEOUT fast/forms/date/input-date-commit-valid-only.html = TIMEOUT fast/forms/date/input-date-validation-message.html = TIMEOUT fast/forms/date/input-valueasdate-date.html = TIMEOUT fast/forms/date/input-valueasnumber-date.html = TIMEOUT fast/forms/date/no-page-popup-controller.html = TIMEOUT fast/forms/fieldset/fieldset-elements.html = TIMEOUT fast/forms/fieldset/fieldset-form-collection-radionode-list.html = TIMEOUT fast/forms/form-collection-elements.html = TIMEOUT fast/forms/form-collection-radio-node-list.html = TIMEOUT fast/forms/indeterminate-input-types.html = TIMEOUT fast/forms/input-width-height-attributes.html = TIMEOUT fast/forms/input-widths.html = TIMEOUT fast/forms/label/labelable-elements.html = TIMEOUT fast/forms/label/labels-add-htmlFor-label.html = TIMEOUT fast/forms/label/labels-add-parent-label.html = TIMEOUT fast/forms/label/labels-change-htmlFor-attribute.html = TIMEOUT fast/forms/label/labels-multiple-sibling-labels.html = TIMEOUT fast/forms/label/labels-parent-and-sibling-labels.html = TIMEOUT fast/forms/label/labels-remove-htmlFor-attribute.html = TIMEOUT fast/forms/label/labels-remove-htmlFor-label.html = TIMEOUT fast/forms/label/labels-remove-parent-label.html = TIMEOUT fast/forms/label/labels-set-htmlFor-attribute.html = TIMEOUT
Attachments
Patch 2
(1.58 KB, patch)
2012-07-10 00:31 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
Patch 3
(1.59 KB, patch)
2012-07-10 00:36 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
yosin
Comment 1
2012-07-10 00:31:25 PDT
Created
attachment 151406
[details]
Patch 2
yosin
Comment 2
2012-07-10 00:31:52 PDT
Comment on
attachment 151406
[details]
Patch 2 Could you review this patch? Thanks in advance.
Kent Tamura
Comment 3
2012-07-10 00:32:09 PDT
Comment on
attachment 151406
[details]
Patch 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=151406&action=review
> Source/WebCore/ChangeLog:11 > + No new tests. This patch doesn't change behavior.
It changes the behavior.
yosin
Comment 4
2012-07-10 00:36:48 PDT
Created
attachment 151407
[details]
Patch 3
yosin
Comment 5
2012-07-10 00:37:33 PDT
Comment on
attachment 151407
[details]
Patch 3 Could you review this patch? Thanks in advance. = Changes since the last review = * Update ChangeLog about tests
Kent Tamura
Comment 6
2012-07-10 00:38:07 PDT
Comment on
attachment 151407
[details]
Patch 3 ok
yosin
Comment 7
2012-07-10 00:39:07 PDT
Comment on
attachment 151407
[details]
Patch 3 Clearing flags on attachment: 151407 Committed
r122201
: <
http://trac.webkit.org/changeset/122201
>
yosin
Comment 8
2012-07-10 00:39:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug