[Chromium-Mac] Form related layout tests cause timeout https://bugs.webkit.org/show_bug.cgi?id=90851

Reviewed by Kent Tamura.

This patch changed to pass a valid argument to LocaleMac
constructor.

No new tests. No more timeout in tests listed in the bug.

* platform/text/mac/LocaleMac.mm:
(WebCore::LocaleMac::currentLocale): Changed to pass local identifier string
instead of NSLocale object.

git-svn-id: svn://svn.chromium.org/blink/trunk@122201 bbb929c8-8fbe-4397-9dbb-9b2b20218538