third_party/WebKit/Source/WebCore/platform/text/mac/LocaleMac.mm
@@ -72,7 +72,7 @@ PassOwnPtr<LocaleMac> LocaleMac::create(const String& localeIdentifier)
 
 LocaleMac* LocaleMac::currentLocale()
 {
-    static LocaleMac* currentLocale = LocaleMac::create([NSLocale currentLocale]).leakPtr();
+    static LocaleMac* currentLocale = LocaleMac::create([[NSLocale currentLocale] localeIdentifier]).leakPtr();
     return currentLocale;
 }
 
